k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: activities
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: andrejtodorovski5/activities:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: activities-secret
