k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: activities
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: andrejtodorovski5/activities-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
      imagePullSecrets:
      - name: activities-secret
