k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: activities-db
  namespace: activities
spec:
  serviceName: "activities-db"
  replicas: 1
  selector:
    matchLabels:
      app: activities-db
  template:
    metadata:
      labels:
        app: activities-db
    spec:
      containers:
      - name: activities-db
        image: postgres
        ports:
        - containerPort: 5432
