k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: activities-db
  namespace: activities
spec:
  selector:
    app: activities-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
