k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: activities-ingress
  namespace: activities
spec:
  rules:
  - host: activities.201084.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: localhost
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
